chore(web componets): side panel example set up

--- a/packages/ibm-products-web-components/examples/tearsheet/index.html
+++ b/packages/ibm-products-web-components/examples/tearsheet/index.html
@@ -22,12 +22,7 @@ LICENSE file in the root directory of this source tree.
 </head>
 <body>
   
-  <div class="${storyPrefix}story-container">
-    <div class="${storyPrefix}story-header"></div>
-    <div id="page-content-selector" class="${storyPrefix}story-content">
-      <cds-button id="toggle-button" @click="${toggleButton}">Toggle tearsheet</cds-button>
-    </div>
-  </div>
+  <cds-button id="toggle-button" >Toggle tearsheet</cds-button>
   <c4p-tearsheet
   open
   width="wide">
