fix(side panel): style update

--- a/packages/ibm-products-web-components/examples/side-panel/index.html
+++ b/packages/ibm-products-web-components/examples/side-panel/index.html
@@ -21,8 +21,11 @@ LICENSE file in the root directory of this source tree.
   <script type="module" src="src/index.js"></script>
 </head>
 <body>
-  <div id="page-content-selector" class="story-content">
-    <cds-button id="toggle-button">Toggle Side panel</cds-button>
+  <div class="example-container">
+    <div class="example-header"></div>
+    <div id="page-content-selector" class="example-content">
+      <cds-button id="toggle-button">Toggle side-panel</cds-button>
+    </div>
   </div>
   <c4p-side-panel
       include-overlay
