feat(useravatar): attribute name change

--- a/packages/ibm-products-web-components/examples/user-avatar/index.html
+++ b/packages/ibm-products-web-components/examples/user-avatar/index.html
@@ -22,7 +22,7 @@ LICENSE file in the root directory of this source tree.
   <div class="example-header"></div>
   <c4p-user-avatar
   name= 'Thomas J. Watson'
-  backgroundColor='order-11-purple'
+  background-color='order-11-purple'
   size="md"
   tooltip-text='TW, Thomas J. Watson user profile'
   tooltip-alignment="right"
