--- a/packages/ibm-products-web-components/examples/full-page-error/index.html
+++ b/packages/ibm-products-web-components/examples/full-page-error/index.html
@@ -21,7 +21,7 @@ LICENSE file in the root directory of this source tree.
         <c4p-full-page-error
           label="Error ###"
           title="Error title"
-          description="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+          description="This is a description of the error."
           kind="custom"
         >
           <a class="cds--link cds--link--lg" href="#">– Forwarding link 1</a>
