--- a/packages/ibm-products-web-components/examples/import-modal/index.html
+++ b/packages/ibm-products-web-components/examples/import-modal/index.html
@@ -11,15 +11,16 @@ LICENSE file in the root directory of this source tree.
 <head>
   <title>carbon-web-components example</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="src/styles.scss" />
+  <link rel="stylesheet" href="dist/styles.css" />
   <style>
    
   </style>
-  <script type="module" src="src/import-modal.ts"></script>
+    <script src="dist/bundle.js"></script>
 </head>
 <body>
   <div class="example-container">
   <div class="example-header"></div>
+
 <import-modal
   title= 'Import'
   description=
@@ -48,6 +49,6 @@ LICENSE file in the root directory of this source tree.
   defaultErrorBody= 'Select a new file and try again.'
   defaultErrorHeader= 'Import failed'
 >
-<import-modal>
+  </import-modal>
 </body>
 </html> 
