feat: use vite for bundling and dist

--- a/packages/ibm-products-web-components/examples/import-modal/index.html
+++ b/packages/ibm-products-web-components/examples/import-modal/index.html
@@ -9,18 +9,14 @@ LICENSE file in the root directory of this source tree.
 
 <html>
 <head>
-  <title>carbon-web-components example</title>
+  <title>carbon-web-components import modal example</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="dist/styles.css" />
-  <style>
-   
-  </style>
-    <script src="dist/bundle.js"></script>
+  
+  <script src="dist/bundle.js"></script>
 </head>
 <body>
   <div class="example-container">
-  <div class="example-header"></div>
-
 <import-modal
   title= 'Import'
   description=
