--- a/packages/ibm-products-web-components/examples/import-modal/index.html
+++ b/packages/ibm-products-web-components/examples/import-modal/index.html
@@ -16,33 +16,6 @@ LICENSE file in the root directory of this source tree.
 </head>
 <body>
   <div class="example-container">
-<import-modal
-  title= 'Import'
-  description=
-    'You can specify a file to import by either dragging it into the drag and drop area or by specifying a URL. (Maximum file size of 500KB)'
-  secondaryButtonText= 'Cancel'
-  primaryButtonText= 'Import'
-  open= false
-  inputPlaceholder= 'URL'
-  inputLabel= 'Add a file by specifying a URL'
-  inputId= 'test-id'
-  inputButtonText= 'Add file'
-  inputButtonIcon= false
-  fileDropHeader= 'Add files using drag and drop'
-  fileDropLabel= 'Drag and drop files here or click to upload'
-  fileUploadLabel= 'files uploaded'
-  accept= 'image/jpeg image/png'
-  fetchErrorHeader= 'Import failed'
-  fetchErrorBody= 'Unable to fetch URL.'
-  invalidFileTypeErrorBody= 'Invalid file type.'
-  invalidFileTypeErrorHeader= 'Import failed'
-  invalidIconDescription= 'Delete'
-  maxFileSize= 500000
-  maxFileSizeErrorBody= '500kb max file size. Select a new file and try again.'
-  maxFileSizeErrorHeader= 'Import failed'
-  defaultErrorBody= 'Select a new file and try again.'
-  defaultErrorHeader= 'Import failed'
->
-  </import-modal>
+<import-modal></import-modal>
 </body>
 </html> 
