feat(deletePattern): addstories

--- a/packages/ibm-products-web-components/examples/delete-pattern/index.html
+++ b/packages/ibm-products-web-components/examples/delete-pattern/index.html
@@ -85,8 +85,6 @@ LICENSE file in the root directory of this source tree.
    </cds-button>
   </section>
 
-
- 
-  <!-- <delete-pattern resourceName="Sample"> </delete-pattern> -->
+  <delete-pattern resourceName="Sample"> </delete-pattern>
 </body>
 </html>
