feat(DeleteAndRemovePattern): rename folders and files

--- a/packages/ibm-products-web-components/examples/delete-and-remove/index.html
+++ b/packages/ibm-products-web-components/examples/delete-and-remove/index.html
@@ -12,7 +12,7 @@ LICENSE file in the root directory of this source tree.
     <title>Delete pattern example</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.scss" />
-    <script type="module" src="src/delete-pattern.ts"></script>
+    <script type="module" src="src/delete-and-remove.ts"></script>
     <script type="module" src="src/index.ts"></script>
   </head>
   <body>
@@ -128,6 +128,6 @@ LICENSE file in the root directory of this source tree.
       </cds-button>
     </section>
 
-    <delete-pattern> </delete-pattern>
+    <delete-remove> </delete-remove>
   </body>
 </html>
