--- a/packages/ibm-products-web-components/examples/delete-and-remove/index.html
+++ b/packages/ibm-products-web-components/examples/delete-and-remove/index.html
@@ -9,7 +9,7 @@ LICENSE file in the root directory of this source tree.
 
 <html>
   <head>
-    <title>Delete pattern example</title>
+    <title>Delete and Remove patterns</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.scss" />
     <script type="module" src="src/delete-and-remove.ts"></script>
