--- a/packages/ibm-products-web-components/examples/truncated-text/index.html
+++ b/packages/ibm-products-web-components/examples/truncated-text/index.html
@@ -19,11 +19,11 @@ LICENSE file in the root directory of this source tree.
       <div class="example-header"></div>
       <div id="page-content-selector" class="example-content">
         <p>
-          <c4p-truncated-string
+          <c4p-truncated-text
             value="Buttons are used to initialize an action, either in the background or foreground of an experience. There are several kinds of buttons. Primary buttons should be used for the principal call to action on the page. Secondary buttons should be used for secondary actions on each page. Danger buttons should be used for a negative action (such as Delete) on the page. Modify the behavior of the button by changing its event properties. Small buttons may be used when there is not enough space for a regular-sized button. This issue is most often found in tables. Small buttons should have three words or fewer."
             lines="2"
             with="tooltip"
-          ></c4p-truncated-string>
+          ></c4p-truncated-text>
         </p>
       </div>
     </div>
