feat: add set of breadcrumbs and multiple refactors, and clean up

--- a/packages/ibm-products-web-components/examples/set-of-actions/index.html
+++ b/packages/ibm-products-web-components/examples/set-of-actions/index.html
@@ -9,7 +9,7 @@ LICENSE file in the root directory of this source tree.
 
 <html>
   <head>
-    <title>carbon-web-components export modal example</title>
+    <title>carbon-web-components set of actions example</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.scss" />
     <script type="module" src="src/set-of-actions.ts"></script>
@@ -26,7 +26,7 @@ LICENSE file in the root directory of this source tree.
     <script type="module">
       import { actionsData } from './src/example-data.ts';
       const setOfActions = document.getElementById('setOfActions');
-      setOfTags.actionsData = actionsData;
+      setOfActions.actionsData = actionsData;
     </script>
   </body>
 </html>
