--- a/packages/ibm-products-web-components/examples/set-of-users/index.html
+++ b/packages/ibm-products-web-components/examples/set-of-users/index.html
@@ -9,7 +9,7 @@ LICENSE file in the root directory of this source tree.
 
 <html>
   <head>
-    <title>carbon-web-components export modal example</title>
+    <title>carbon-web-components set of users example</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.scss" />
     <script type="module" src="src/set-of-users.ts"></script>
