feat(saving): auto saving

--- a/packages/ibm-products-web-components/examples/saving/index.html
+++ b/packages/ibm-products-web-components/examples/saving/index.html
@@ -12,10 +12,12 @@ LICENSE file in the root directory of this source tree.
   <title>carbon-web-components import modal example</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="src/saving.scss" /> 
-  <script type="module" src="src/saving.ts"></script>
+  <!-- <script type="module" src="src/manual-saving.ts"></script> -->
+  <script type="module" src="src/auto-saving.ts"></script>
 </head>
 <body>
   <div class="example-container">
-<custom-saving></custom-saving>
+<!-- <manual-saving></manual-saving> -->
+<auto-saving></auto-saving>
 </body>
 </html> 
