feat(saving): storybook update

--- a/packages/ibm-products-web-components/examples/saving/index.html
+++ b/packages/ibm-products-web-components/examples/saving/index.html
@@ -12,12 +12,16 @@ LICENSE file in the root directory of this source tree.
   <title>carbon-web-components import modal example</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="src/saving.scss" /> 
-  <!-- <script type="module" src="src/manual-saving.ts"></script> -->
+  <script type="module" src="src/manual-saving.ts"></script>
   <script type="module" src="src/auto-saving.ts"></script>
 </head>
 <body>
-  <div class="example-container">
-<!-- <manual-saving></manual-saving> -->
-<auto-saving></auto-saving>
+  <section>
+    <h4>Saving</h4>
+    <p>Auto Saving</p>
+    <auto-saving></auto-saving>
+    <p>Manual Saving</p>
+    <manual-saving></manual-saving>
+  </section>
 </body>
 </html> 
