fix(save pattern): update story and example

--- a/packages/ibm-products-web-components/examples/saving/index.html
+++ b/packages/ibm-products-web-components/examples/saving/index.html
@@ -9,7 +9,7 @@ LICENSE file in the root directory of this source tree.
 
 <html>
 <head>
-  <title>carbon-web-components import modal example</title>
+  <title>carbon-web-components Saving example</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="src/saving.scss" /> 
   <script type="module" src="src/manual-saving.ts"></script>
