feat(page-header): add overflow breadcrumb example

--- a/packages/ibm-products-web-components/examples/set-of-breadcrumbs/index.html
+++ b/packages/ibm-products-web-components/examples/set-of-breadcrumbs/index.html
@@ -24,9 +24,9 @@ LICENSE file in the root directory of this source tree.
       </div>
     </section>
     <script type="module">
-      import { breadcrumbData } from './src/example-data.ts';
+      import { breadcrumbsData } from './src/example-data.ts';
       const setOfBreadcrumbs = document.getElementById('setOfBreadcrumbs');
-      setOfBreadcrumbs.breadcrumbData = breadcrumbData;
+      setOfBreadcrumbs.breadcrumbsData = breadcrumbsData;
     </script>
   </body>
 </html>
