chore: add footer back now that cds domain is registered

--- a/packages/ibm-products/.storybook/manager-head.html
+++ b/packages/ibm-products/.storybook/manager-head.html
@@ -67,12 +67,9 @@
 </script>
 
 <!-- Footer -->
-<!-- TODO: Uncomment footer tag and script below to test for analytics errors -->
-<!-- <footer>
+<footer>
   <dds-footer-container key="footer" disable-locale-button="true" size="micro" />
 </footer>
-<script type="module" src="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/tag/v1/latest/footer.min.js"></script> -->
-
 
 <!-- Style overrides -->
 <style>
