--- a/packages/ibm-products-web-components/.storybook/manager-head.html
+++ b/packages/ibm-products-web-components/.storybook/manager-head.html
@@ -1,12 +1,12 @@
-<meta name="keywords" content="IBM, IBM Software, Carbon, Carbon for IBM Products, Cloud, Cognitive, React, React.js" />
+<meta name="keywords" content="IBM, IBM Software, Carbon, Carbon for IBM Products, Cloud, Cognitive, web components, lit" />
 <meta name="description"
-  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products." />
+  content="This is the web component implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products." />
 
 <!-- Open Graph -->
 <meta property="og:title" content="Carbon for IBM Products" />
 <meta property="og:site_name" content="Carbon for IBM Products" />
 <meta property="og:description"
-  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products." />
+  content="This is the web component implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products." />
 <meta property="og:image" content="https://ibm-products.carbondesignsystem.com/social.png" />
 <meta property="og:url" content="https://ibm-products.carbondesignsystem.com" />
 
@@ -62,7 +62,7 @@
 <!-- Storybook override -->
 <script>
   setTimeout(function () {
-    document.title = 'Carbon for IBM Products';
+    document.title = 'Carbon for IBM Products, web components';
   }, 1000);
 </script>
 
