--- a/packages/ibm-products-web-components/.storybook/preview-head.html
+++ b/packages/ibm-products-web-components/.storybook/preview-head.html
@@ -2,7 +2,4 @@
   window.global = window;
 </script>
 
-<link
-  rel="stylesheet"
-  href="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/tag/v1/latest/plex.css"
-/>
+<link rel="stylesheet" href="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/tag/v2/latest/plex.css" />
