--- a/packages/ibm-products/.storybook/manager-head.html
+++ b/packages/ibm-products/.storybook/manager-head.html
@@ -1,23 +1,13 @@
-<meta
-  name="keywords"
-  content="IBM, IBM Software, Carbon, Carbon for IBM Products, Cloud, Cognitive, React, React.js"
-/>
-<meta
-  name="description"
-  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products."
-/>
+<meta name="keywords" content="IBM, IBM Software, Carbon, Carbon for IBM Products, Cloud, Cognitive, React, React.js" />
+<meta name="description"
+  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products." />
 
 <!-- Open Graph -->
 <meta property="og:title" content="Carbon for IBM Products" />
 <meta property="og:site_name" content="Carbon for IBM Products" />
-<meta
-  property="og:description"
-  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products."
-/>
-<meta
-  property="og:image"
-  content="https://ibm-products.carbondesignsystem.com/social.png"
-/>
+<meta property="og:description"
+  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products." />
+<meta property="og:image" content="https://ibm-products.carbondesignsystem.com/social.png" />
 <meta property="og:url" content="https://ibm-products.carbondesignsystem.com" />
 
 <!-- Favicon -->
@@ -26,27 +16,21 @@
 <!-- Social -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image:alt" content="Carbon for IBM Products" />
-<meta
-  name="twitter:image"
-  content="https://ibm-products.carbondesignsystem.com/social.png"
-/>
+<meta name="twitter:image" content="https://ibm-products.carbondesignsystem.com/social.png" />
 
 <!-- Window objects / analytics config -->
 <script>
-  window._ibmAnalytics = {
-    settings: {
-      name: '',
-      isSpa: true,
-      tealiumProfileName: 'in-app-usage-growth',
-    },
-    onLoad: [['ibmStats.pageview', []]],
-  };
-
   window.digitalData = {
     page: {
       pageInfo: {
+        language: 'en-US',
+        productTitle: 'Carbon for IBM Products',
+        analytics: {
+          category: 'KnowledgeCenter',
+        },
         ibm: {
-          siteId: '',
+          country: 'US',
+          siteId: 'C4IP',
         },
         segment: {
           autoPageEventSpa: true,
@@ -72,6 +56,21 @@
   };
 </script>
 
+<!-- Updating Autotrack -->
+<script>
+  const overrideCallbackFunctionTest = (eventName, eventData) => {
+    if (window.analytics) {
+      analytics.track(eventName, eventData);
+    }
+  };
+
+  window.onload = () => {
+    if (window.autoTrack) {
+      window.autoTrack.updateCallback(overrideCallbackFunctionTest);
+    }
+  };
+</script>
+
 <!-- Storybook override -->
 <script>
   setTimeout(function () {
@@ -81,12 +80,9 @@
 
 <!-- Footer -->
 <footer>
-  <c4d-footer-container size="micro"></c4d-footer-container>
+  <c4d-footer-container disable-locale-button="true" size="micro"></c4d-footer-container>
 </footer>
-<script
-  type="module"
-  src="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/version/v2.29.0/footer.min.js"
-></script>
+<script type="module" src="https://1.www.s81c.com/common/carbon-for-ibm-dotcom/version/v2.29.0/footer.min.js"></script>
 
 <!-- Style overrides -->
 <style>
@@ -95,12 +91,22 @@
   }
 
   /* This style is required because of the compliance footer */
-  #root > div {
+  #root>div {
     height: calc(100vh - 48px);
   }
 
-  /* This style is required because of the compliance footer in smaller screens */
+  @media (max-width: 1056px) {
+    #root>div {
+      height: calc(100vh - 98px);
+    }
+  }
+
   @media (max-width: 671px) {
+    #root>div {
+      height: calc(100vh - 342px);
+    }
+
+    /* This style is required because of the compliance footer in smaller screens */
     nav[class^='css-'] {
       height: 281px;
     }
