feat(checklist): stackblitz example

--- a/packages/ibm-products-web-components/examples/checklist/index.html
+++ b/packages/ibm-products-web-components/examples/checklist/index.html
@@ -19,12 +19,12 @@ LICENSE file in the root directory of this source tree.
     <div class="checklist-wrapper">
       <c4p-checklist
         title="Checklist header"
-        chartLabel="15% complete"
-        toggleLabel="Toggle"
-        toggleLabelAlign="top"
-        toggleAriaLabel="Checklist toggle"
+        chart-label="15% complete"
+        toggle-label="Toggle"
+        toggle-label-align="top"
+        toggle-aria-label="Checklist toggle"
         open
-        viewAllLabel="View all (10)"
+        view-all-label="View all (10)"
       >
         <c4p-checklist-group title="Section label">
           <c4p-checklist-item
@@ -45,15 +45,5 @@ LICENSE file in the root directory of this source tree.
     </div>
     
   </div>
-
-
-  <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", () => {
-      // const panel = document.querySelector("c4p-side-panel");
-      // if (panel) {
-      //   panel.title = "A title, can be omitted";
-      // }
-    });
-  </script>
 </body>
 </html>
