fix(Instrumentation): remove common script (#7722)
* fix(Instrumentation): remove common script

* fix(Instrumentation): skip identify since we don't have auth on our site

* fix: moved scripts to manager-head mostly. Left main files node_env checked commented out.

* chore: add footer back now that cds domain is registered

* feat: add footer to wc storybook

* Added some media queries for the new footer

* Adding ibm-common back in as I do not see it loading in the preview now

* chore: format

* removed unneeded override for Autotrack

---------

Co-authored-by: Jeff Longshore <Jeff.Longshore@ibm.com>
Co-authored-by: Afsal K <makafsal@users.noreply.github.com>
Co-authored-by: David Menendez <damenend@gmail.com>

--- a/packages/ibm-products-web-components/.storybook/manager-head.html
+++ b/packages/ibm-products-web-components/.storybook/manager-head.html
@@ -1,10 +1,10 @@
 <meta
   name="keywords"
-  content="IBM, IBM Software, Carbon, Carbon for IBM Products, Cloud, Cognitive, React, React.js"
+  content="IBM, IBM Software, Carbon, Carbon for IBM Products, Cloud, Cognitive, web components, lit"
 />
 <meta
   name="description"
-  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products."
+  content="This is the web component implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products."
 />
 
 <!-- Open Graph -->
@@ -12,7 +12,7 @@
 <meta property="og:site_name" content="Carbon for IBM Products" />
 <meta
   property="og:description"
-  content="This is the React implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products."
+  content="This is the web component implementation of the Carbon for IBM Products components which build on top of the Carbon Design System. It is a set of styled patterns and components, designed and implemented for IBM Products."
 />
 <meta
   property="og:image"
@@ -78,7 +78,7 @@
 <!-- Storybook override -->
 <script>
   setTimeout(function () {
-    document.title = 'Carbon for IBM Products';
+    document.title = 'Carbon for IBM Products, web components';
   }, 1000);
 </script>
 
